# basesplit

./: README.md  hello.py  main.py  parse_receipt.py  plivo_message.py  pyproject.toml  telegram_bot.py
